# pyproject-template

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yaml.example
notes/: commit_message_prefix.md  print_gymnasium_env_sepc.py  print_gymnasium_envs.py
